--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FB Messenger UI Clone</string>
+    <string name="chats">Chats</string>
+    <string name="calls">Calls</string>
+    <string name="people">People</string>
+    <string name="stories">Stories</string>
 </resources>
