--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="calls">Calls</string>
     <string name="people">People</string>
     <string name="stories">Stories</string>
+    <string name="profile_picture">profile picture</string>
 </resources>
