--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="people">People</string>
     <string name="stories">Stories</string>
     <string name="profile_picture">profile picture</string>
+    <string name="search">Search</string>
 </resources>
